[package]
name = "ratodoui_server"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.228"
futures = "0.3.32"
tokio = { version = "1.52.4", features = ["full"] }
dotenv = "0.15.0"
google-tasks1 = "7.0.0"
axum = "0.8.9"
argon2 = { version = "0.5.3", features = ["std"] }
rand_core = "0.10.1"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
chrono = "0.4.45"

[dependencies.mongodb]
version = "3.8.0"
